adding db env varaible

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,5 +25,4 @@ test:
   database: personal_assistant_test
 
 production:
-  <<: *default
-  database: personal_assistant_production
+  url: <%= ENV['DATABASE_URL'] %>
